Add service management scripts and usage documentation
Features:
✅ start.sh - Intelligent service startup script
  - Environment validation (Node.js, files, ports)
  - Automatic directory creation
  - Background process management
  - Startup verification and status display
  - Cross-platform IP detection

✅ stop.sh - Graceful service shutdown script
  - Smart process detection
  - Graceful termination (SIGTERM) with fallback
  - Automatic cleanup of PID files
  - Last log entries display

✅ status.sh - Comprehensive status monitoring
  - Service and process status
  - Port and network monitoring
  - Log file analysis
  - Configuration validation
  - Storage directory statistics
  - Cross-platform compatibility (macOS/Linux)

✅ USAGE.md - Complete user documentation
  - Quick start guide
  - Detailed script explanations
  - Configuration instructions
  - Troubleshooting guide
  - Security recommendations

✅ Enhanced .gitignore
  - Exclude runtime files (server.pid, *.log)
  - Exclude logs directory

User Experience:
🚀 Simple commands: ./start.sh, ./stop.sh, ./status.sh
📊 Rich status information with colored output
🔧 Automatic error detection and suggestions
📝 Comprehensive logging and monitoring
🛡️ Safe process management with cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,12 @@ LOCAL_DEV_NOTES.md
 dev-notes.md
 local-notes.md
 
+# Runtime files
+server.pid
+server.log
+*.log
+logs/
+
 # Node.js
 node_modules/
 npm-debug.log*
