Add remaining frontend test files and backend updates
Frontend:
- Add alternative app implementations for testing
- Include component directory structure
- Preserve development and testing files

Backend:
- Minor updates to server configuration
- Ensure compatibility with cleaned repository

These files are part of the project structure and should be tracked.

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,6 +1,26 @@
 # File Transfer Application Configuration
 
+[server]
 port=3000
+
+[fileSystem]
 storagePath=./storage
+
+[auth]
 username=admin
 password=password
+
+[security]
+# Security features (true/false)
+# Only authentication and data transmission security are always enabled
+enableRateLimit=false
+enableSecurityHeaders=false
+enableInputValidation=false
+enableFileUploadSecurity=false
+enableRequestLogging=false
+
+# CSP (Content Security Policy) - set to false for development
+enableCSP=false
+
+# JWT Secret (leave empty to use default)
+jwtSecret=
