Fix React Hooks order violation and storage path configuration
- Fixed React Hooks order violation by moving useEffect hooks to proper location
- Fixed storage path configuration to support both relative and absolute paths
- Added configuration examples in config.ini for different path types
- Fixed shell scripts to read PORT from config.ini automatically
- Implemented download functionality with proper authentication
- Added right-click context menu with copy/cut/paste operations
- Implemented recursive search functionality
- All major errors from error.txt have been resolved

--- a/src/config.ini
+++ b/src/config.ini
@@ -4,7 +4,12 @@
 port=3000
 
 [fileSystem]
-storagePath=./storage
+# Storage path for files - can be relative or absolute path
+# Examples:
+#   storagePath=./storage                    (relative path, default)
+#   storagePath=/home/user/myfiles          (absolute path on Linux/Mac)
+#   storagePath=C:\Users\User\Documents     (absolute path on Windows)
+storagePath=/Users/ascopia/Project/
 
 [auth]
 username=admin
