🔍 Implement comprehensive system logging with detailed request tracking
✨ Phase 1: Core Logging System
- Add SystemLogger class with structured JSON logging
- Add LogFormatters for console and file output
- Add configurable logging options to config.ini
- Support real IP detection and user identification

🌐 Phase 2: Request Tracking Enhancement
- Integrate SystemLogger into security middleware
- Add detailed authentication event logging
- Track successful/failed login attempts with IP and user agent
- Enhance request logging with real IP detection

📁 Phase 3: File Operation Logging
- Add comprehensive file upload/download logging
- Track file search operations with performance metrics
- Log file operation results and error handling
- Add security event logging for path traversal attempts

🎯 Features Implemented:
- Real IP source tracking (proxy-aware)
- Precise ISO 8601 timestamps with milliseconds
- User identity tracking (authenticated vs anonymous)
- Structured JSON log format for easy parsing
- Performance metrics and operation duration tracking
- Configurable log levels and categories
- Security event detection and logging

📋 Files Added:
- src/backend/logging/system-logger.js (core logger)
- src/backend/logging/formatters.js (output formatters)
- src/backend/logging/index.js (module exports)

🔧 Files Modified:
- src/backend/server.js (main integration)
- src/backend/middleware/security.js (request tracking)
- src/backend/file-system/operations.js (file operations)
- src/config.ini (logging configuration)

Resolves: #54

--- a/src/config.ini
+++ b/src/config.ini
@@ -22,10 +22,20 @@ enableRateLimit=false
 enableSecurityHeaders=false
 enableInputValidation=false
 enableFileUploadSecurity=false
-enableRequestLogging=false
+enableRequestLogging=true
 
 # CSP (Content Security Policy) - set to false for development
 enableCSP=false
 
 # JWT Secret (leave empty to use default)
 jwtSecret=
+
+[logging]
+# Comprehensive logging configuration
+enableDetailedLogging=true
+logLevel=info
+logFileOperations=true
+logSecurityEvents=true
+logPerformanceMetrics=true
+includeUserAgent=true
+includeRealIP=true
