Fix backend error and bugs and add API test bash script

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,7 +1,7 @@
 # File Transfer Application Configuration
 
 [server]
-port=3000
+port=9400
 
 [fileSystem]
 # Storage path for files - can be relative or absolute path
@@ -14,6 +14,7 @@ storagePath=./storage
 [auth]
 username=admin
 password=password
+passwordHashed=false
 
 [security]
 # Security features (true/false)
@@ -28,4 +29,4 @@ enableRequestLogging=false
 enableCSP=false
 
 # JWT Secret (leave empty to use default)
-jwtSecret=
+jwtSecret=L91INJ74a
