--- a/src/config.ini
+++ b/src/config.ini
@@ -30,3 +30,12 @@ enableCSP=false
 
 # JWT Secret (leave empty to use default)
 jwtSecret=
+
+[shareLinks]
+# Share link feature configuration
+enabled=true
+defaultExpiration=86400
+maxExpiration=2592000
+allowPasswordProtection=true
+cleanupInterval=86400
+maxDownloadsDefault=0
