--- a/src/config.ini
+++ b/src/config.ini
@@ -29,7 +29,7 @@ enableRequestLogging=false
 enableCSP=false
 
 # JWT Secret (leave empty to use default)
-jwtSecret=
+jwtSecret=your-secret-key-here
 
 [shareLinks]
 # Share link feature configuration
