Add #90 #91 #92 and Fix #93 #94

--- a/src/config.ini
+++ b/src/config.ini
@@ -39,3 +39,12 @@ maxExpiration=2592000
 allowPasswordProtection=true
 cleanupInterval=86400
 maxDownloadsDefault=0
+
+[ssl]
+# SSL/TLS configuration
+# HTTPS server port (default: 9443)
+httpsPort=9443
+# Enable HTTP to HTTPS redirect (default: true)
+enableHttpsRedirect=true
+# Automatically generate certificates on first run (default: false)
+autoGenerateCerts=false
